fixed dark mode bug and added new projects to portfolio

--- a/css/index.css
+++ b/css/index.css
@@ -989,9 +989,9 @@ div#columns figure {
     padding-bottom: 10px;
     border-radius: 5px;
     opacity: 1;
-    -webkit-box-shadow: 0px 1px 18px -1px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 1px 18px -1px rgba(0,0,0,0.75);
-    box-shadow: 0px 1px 18px -1px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 1px 9px -1px rgba(0,0,0,0.43);
+    -moz-box-shadow: 0px 1px 9px -1px rgba(0,0,0,0.43);
+    box-shadow: 0px 1px 9px -1px rgba(0,0,0,0.43);
   display: inline-block;
   column-break-inside: avoid;
 }
@@ -1009,7 +1009,12 @@ div#columns figure img {
     padding-bottom: 15px;
     margin-bottom: 5px;
 }
-
+div#columns figure video {
+  width: 100%; height: auto;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 15px;
+  margin-bottom: 5px;
+}
 div#columns figure figcaption {
     color: #444;
   line-height: 1.5;
@@ -1028,9 +1033,6 @@ div#columns small a {
   transition: .4s color;
 }
 
-  div#columns:hover figure:not(:hover) {
-    opacity: .4;
-  }
 .visit-link{
   text-align: center;
 }
